Bug 1966313 - Ignore empty inline frames in nsBidiPresUtils::TraverseFrames. r=dshin

Note that this changes the behavior of an existing reftest at
layout/reftests/bidi/588739-2.html. This is expected, because this
testcase was using an empty <span> with no other relevant properties,
and expecting it to interrupt bidi reordering, but that is exactly
the behavior reported as a bug here.

Both Chrome and Safari agree with the updated rendering of that
testcase (and the WPT version added here), so the change is both
logically correct and aligns us with the other browsers.

Differential Revision: https://phabricator.services.mozilla.com/D249259